# omni_pose_follower

./: CMakeLists.txt  README.md  package.xml
config/: iai_donbot.yaml  kmr_iiwa.yaml  pr2.yaml  ros_control_sim.yaml
launch/: omni_pose_follower.launch  omni_pose_follower_iai_donbot.launch  omni_pose_follower_kmr_iiwa.launch  omni_pose_follower_map_iai_donbot_real.launch  omni_pose_follower_map_iai_donbot_unreal.launch  omni_pose_follower_map_pr2.launch  omni_pose_follower_pr2.launch
script/: omni_pose_follower.py  omni_pose_follower_map.py  omni_pose_follower_pr2.py
